<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="mainMenuViewModel"
            type="com.example.memory.viewmodels.MainMenuViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.MainMenuFragment">


        <TextView
            android:id="@+id/memory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memory"
            android:textColor="@color/black"
            android:textSize="65sp"
            android:fontFamily="@font/zcoolkuaile_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <Button
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:textSize="20sp"
            android:fontFamily="@font/squada_one_regular"
            android:onClick="@{() -> mainMenuViewModel.play()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <Button
            android:id="@+id/optionsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/options"
            android:textSize="20sp"
            android:fontFamily="@font/squada_one_regular"
            android:onClick="@{() -> mainMenuViewModel.goToOptions()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55"/>

        <Button
            android:id="@+id/scoreboardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scoreboard"
            android:textSize="20sp"
            android:fontFamily="@font/squada_one_regular"
            android:onClick="@{() -> mainMenuViewModel.showScoreboard()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>