<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="optionsViewModel"
            type="com.example.memory.viewmodels.OptionsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.OptionsFragment">

        <TextView
            android:id="@+id/changeIcons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeTheme"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:fontFamily="@font/amaticsc_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.28"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <Spinner
            android:id="@+id/changeIconsSpinner"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaticsc_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.88"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/setGameTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeDifficulty"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:fontFamily="@font/amaticsc_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35" />

        <Spinner
            android:id="@+id/changeDifficultySpinner"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaticsc_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.88"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35" />

        <TextView
            android:id="@+id/clearScoreTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clearScoreTable"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:fontFamily="@font/amaticsc_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <Switch
            android:id="@+id/clearTableSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:fontFamily="@font/amaticsc_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/saveSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveSettings"
            android:textSize="20sp"
            android:fontFamily="@font/squada_one_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7" />

        <Button
            android:id="@+id/goToMainMenuButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goToMainMenu"
            android:textSize="20sp"
            android:fontFamily="@font/squada_one_regular"
            android:onClick="@{() -> optionsViewModel.goToMainMenu()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>